--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -12,4 +12,4 @@
 </div><!-- /.google-ads -->
 {% endif %}
 
-<span>&copy; 2005 - {{ site.time | date: '%Y' }} {{ site.owner.name }}. Powered by <a href="https://pages.github.com/" rel="nofollow">GitHub Pages</a> using the <a href="http://mademistakes.com/minimal-mistakes/" rel="nofollow">Minimal Mistakes</a> theme.</span>
+<span>&copy; 2005 - {{ site.time | date: '%Y' }} {{ site.owner.name }}. Powered by <a href="https://pages.github.com/" rel="nofollow">GitHub Pages</a> using the <a href="https://mmistakes.github.io/minimal-mistakes/" rel="nofollow">Minimal Mistakes</a> theme.</span>
