--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,12 +36,16 @@
     <h3><a href="{{ site.url}}/posts/">Recent Content</a></h3>
     {% for post in site.posts limit:10 %}
     <article>
-      {% if post.link %}
-        <h2 class="link-post"><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> <a href="{{ post.link }}" target="_blank" title="{{ post.title }}"><i class="fa fa-link"></i></h2>
-      {% else %}
-        <h2><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h2>
-        <p>{{ post.excerpt | strip_html | truncate: 160 }}</p>
-      {% endif %}
+      <h2>
+        {% if post.link %}
+        <a href="{{ post.link }}" target="_blank" title="{{ post.title }}"><i class="fa fa-link"></i>
+        {% elsif post.category == 'talks' %}
+        <i class="fa fa-comment"></i>
+        {% elsif post.category == 'posts' %}
+        <i class="fa fa-align-left"></i>
+        {% endif %}
+        <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h2>
+      <p>{{ post.excerpt | strip_html | truncate: 160 }}</p>
     </article>
     {% endfor %}
   </div><!-- /#index -->
