Fix figure margin

--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -17,7 +17,7 @@ hr {
    ========================================================================== */
 
 figure {
-	margin-bottom: $indent-var;
+	margin-bottom: $indent-var!important;
 }
 
 article img {
