--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -179,3 +179,13 @@ svg:not(:root) {
 	@include rounded(4px);
 	@include box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.05));
 }
+
+/*
+   Other
+   ========================================================================== */
+
+.reversefootnote {
+	sup {
+		display: none;
+	}
+}
