--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -347,6 +347,9 @@ $button-size: 1.5rem;
 	p {
 		font-size: 80%;
 		font-style: italic;
+		span {
+			font-style: normal;
+		}
 	}
 	a, a:hover {
 		border-bottom: 0 solid transparent;
